Updated HTML of the EditStudent.js module, added submit handling to update existing student with new value using PUT operation. Updated styling slightly to fix spacing and button alignment.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,3 +18,26 @@ $gutter : 15px;
     }
   }
 }
+
+.directory-contents {
+  .col { display: flex; }
+  .directory-card { flex-grow: 1; }
+  .card-body {
+    position: relative;
+    min-height: 178px;
+    a {
+      position: absolute;
+      bottom: 1.25rem;
+    }
+  }
+}
+
+.student-content {
+  .col,
+  .col-md-6,
+  .col-xl-4,
+  .col-xl-8 {
+    padding-left: ($gutter / 2);
+    padding-right: ($gutter / 2);
+  }
+}
